bluebottle/common/static/sass/new-sass/modules/_video.scss
.video-item {
    position: relative;
    height: 510px;
    
    &.is-active {

        .video-item-container {
            @include animation(fadeOutUpBig .3s ease-out);
            @include animation-fill-mode(forwards);
        }

        .vimeo-item-container {
            @include animation(fadeInDownBig .3s ease-out);
            @include animation-fill-mode(forwards);
            z-index: 9;
            opacity: 1;
            @include transition(opacity, .3s ease-in-out);

            .vimeo-item-content {
                .close-video {
                    display: block;
                }
            }
        }
    }

    &.is-inactive {
        .video-item-container {
            @include animation(fadeInDownBig.3s ease-out);
            @include animation-fill-mode(forwards);
        }

        .vimeo-item-container {
            @include animation(fadeOutUpBig .3s ease-out);
            @include animation-fill-mode(forwards);
            z-index: 0;
            opacity: 0;

            .vimeo-item-content {
                .close-video {
                    display: none;
                }
            }
        }
    }

    .video-item-container {
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        background: transparent;


        .video-action {
            position: absolute;
            top: 62%;
            left: 50%;
            height: 220px;
            width: 220px;
            margin-top: -110px;
            margin-left: -110px;
            z-index: 9;

            .video-play-btn {
                display: block;
                margin: auto;
                height: 105px;
                width: 105px;
                background: url("/static/assets/images/img/icons/icon-play-video.svg");
                @include transform(scale(1));
                @include transition(transform .1s ease-in-out);

                &:hover {
                    @include transform(scale(1.1));
                }
            }

            .video-watch {
                position: relative;
                h3 {
                    text-transform: none;
                    color: white;
                    text-align: center;
                }
            }
        }

        .heading {
            position: absolute;
            top: 15px;
            left: 0;
            right: 0;
            margin-left: auto;
            margin-right: auto;     
            z-index: 9;
            width: 40%;

            h1 {
                text-align: center;
            }
        }

        .video-item-content {
            position: relative;
            width: 100%;
            height: 510px;
            background: url("/static/assets/images/img/pages/home/carousel/video-still-1.jpg")  no-repeat;
            background-repeat: no-repeat;
            background-position: 50% 50%;
            background-size: cover;
            -webkit-filter: blur(0);
            @include transition(all, .3s ease-in-out);
            
            &.is-blur {
                -webkit-filter: blur(8px);
            }
        }
    }

    .vimeo-item-container {
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        background: rgba(0,0,0, 1);
        opacity: 0;
        @include transition(opacity, .3s ease-in-out);

        .vimeo-item-content {
            position: relative;
            width: 100%;
            height: 100%;
            max-width: 1200px;
            margin: auto;
            max-height: 510px;
            background: black;

            .close-video {
                position: absolute;
                width: 18px;
                height: 18px;
                background: url("/static/assets/images/img/icons/icon-video-close.svg") transparent no-repeat;
                top: 15px;
                left: 30px;
                z-index: 10;
                cursor: pointer;
                display: none;
            }
        }

        .vimeo-video {
            width: 100%;

            iframe {
                position: absolute;
                top: 0;
                left: 0;
                width: 100%;
                height: 100%;
            }
        }
    }
}

